--- a/index.html
+++ b/index.html
@@ -639,12 +639,13 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </iframe></li>
 <li class="fragment"><a href="http://seruff.weebly.com/" class="uri">http://seruff.weebly.com/</a></li>
 </ul>
-</section>
-<section id="data-mining---prof.torgo" class="slide level2" data-background-image="ser3.png" data-background-size="130px" data-background-position="bottom">
-<h2>Data Mining - Prof. Torgo</h2>
+<!--
+## Data Mining - Prof. Torgo {data-background-image="ser3.png" data-background-size="130px" data-background-position=bottom}
+
 <div class="midcenter" style="margin-left:-3px; margin-top:-3px;">
-<p><img src="datamining.png"></img></p>
+<img src="datamining.png"></img>
 </div>
+-->
 </section>
 <section id="iii-ser" class="slide level2" data-background-image="ser3.png" data-background-size="130px" data-background-position="top">
 <h2>III SER</h2>
@@ -686,6 +687,11 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li class="fragment">www.youtube.com/estatisticacomr mais de 9 mil visualizações e 400 inscritos</li>
 <li class="fragment">Portal, vídeos, tutoriais, livros e treinamento.</li>
 </ul>
+</section>
+<section id="ser-py-v" class="slide level2" data-background-image="ser3.png" data-background-size="130px" data-background-position="top">
+<h2>SER PY V</h2>
+<h3 id="proximos-passos">PROXIMOS PASSOS</h3>
+<h3 id="section">2020</h3>
 <!--
 ## Programa Estatística é com R! {data-background-image="ser3.png" data-background-size="130px" data-background-position=top}
 
