--- a/index.html
+++ b/index.html
@@ -443,8 +443,9 @@ style.innerHTML = style_script;
 document.getElementsByTagName('head')[0].appendChild(style);
 </script>
 
-    <link href="index_files/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
-    <link href="index_files/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
+    <link href="index_files/font-awesome-5.0.13/css/fa-svg-with-js.css" rel="stylesheet" />
+    <script src="index_files/font-awesome-5.0.13/js/fontawesome-all.min.js"></script>
+    <script src="index_files/font-awesome-5.0.13/js/fa-v4-shims.min.js"></script>
 </head>
 <body>
   <div class="reveal">
@@ -469,20 +470,11 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <section id="iv-ser-py-1" class="slide level2" data-background-image="ser3.png" data-background-size="130px" data-background-position="top">
 <h2>IV SER PY</h2>
 <h3 id="parceiros">PARCEIROS</h3>
-<ul>
-<li class="fragment">inserir logo da ENCE</li>
-<li class="fragment">inserir logo do IMPA</li>
-<li class="fragment">inserir logo da UNIRIO</li>
-<li class="fragment">inserir os outros logos</li>
-</ul>
-</section>
-<section id="iv-ser-py-2" class="slide level2" data-background-image="ser3.png" data-background-size="130px" data-background-position="top">
-<h2>IV SER PY</h2>
 <div class="midcenter" style="margin-left:-3px; margin-top:-3px;">
-<p><img src="parceriasexemplo.jpg"></img></p>
+<p><img src="barraapoio.png"></img></p>
 </div>
 </section>
-<section id="iv-ser-py-3" class="slide level2" data-background-image="ser3.png" data-background-size="130px" data-background-position="top">
+<section id="iv-ser-py-2" class="slide level2" data-background-image="ser3.png" data-background-size="130px" data-background-position="top">
 <h2>IV SER PY</h2>
 <h3 id="minicursos-nacionais">MINICURSOS NACIONAIS</h3>
 <ul>
@@ -493,7 +485,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li class="fragment">R + PostgreSQL – Steven e Rafael/UNIRIO</li>
 </ul>
 </section>
-<section id="iv-ser-py-4" class="slide level2" data-background-image="ser3.png" data-background-size="130px" data-background-position="top">
+<section id="iv-ser-py-3" class="slide level2" data-background-image="ser3.png" data-background-size="130px" data-background-position="top">
 <h2>IV SER PY</h2>
 <h3 id="minicursos-nacionais-cont.">MINICURSOS NACIONAIS (Cont.)</h3>
 <ul>
@@ -503,12 +495,21 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li class="fragment">Resolvendo Captchas – Julio/USP</li>
 </ul>
 </section>
-<section id="iv-ser-py-5" class="slide level2" data-background-image="ser3.png" data-background-size="130px" data-background-position="top">
+<section id="iv-ser-py-4" class="slide level2" data-background-image="ser3.png" data-background-size="130px" data-background-position="top">
 <h2>IV SER PY</h2>
 <h3 id="minicursos-internacionais">MINICURSOS INTERNACIONAIS</h3>
 <ul>
 <li class="fragment">Datavisualization with highcharts: From beginner to expert – Joshua</li>
 <li class="fragment">Building web applications in R using Shiny – Dean Attali</li>
+</ul>
+</section>
+<section id="iv-ser-py-5" class="slide level2" data-background-image="ser3.png" data-background-size="130px" data-background-position="top">
+<h2>IV SER PY</h2>
+<h3 id="minicursos-online">MINICURSOS ONLINE</h3>
+<ul>
+<li class="fragment">Introdução ao R: <a href="https://goo.gl/forms/ztBAk9BRRNJbHWRM2" class="uri">https://goo.gl/forms/ztBAk9BRRNJbHWRM2</a></li>
+<li class="fragment">Introdução ao Tidyverse: <a href="https://goo.gl/forms/zYDwSnBDgSoceyg02" class="uri">https://goo.gl/forms/zYDwSnBDgSoceyg02</a></li>
+<li class="fragment">Mais de 500 participantes de todos os estados do Brasil e exterior: Portugal, França e Reino Unido.</li>
 </ul>
 </section>
 <section id="iv-ser-py-6" class="slide level2" data-background-image="ser3.png" data-background-size="130px" data-background-position="top">
@@ -543,8 +544,10 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <h2>IV SER PY</h2>
 <h3 id="artigos-e-posteres">ARTIGOS E PÔSTERES</h3>
 <ul>
-<li class="fragment">Sessão Pôster:29 trabalhos envolvendo XX autores da XXXXXXXXXXXXXX</li>
-<li class="fragment">Sessão Oral: 17 trabalhos envolvendo XX autores da XXXXXXXXXXXXXX</li>
+<li class="fragment">Sessão Pôster:28 trabalhos</li>
+<li class="fragment">Sessão Oral: 16 trabalhos</li>
+<li class="fragment">Autores envolvidos: 112</li>
+<li class="fragment">Instituições envolvidas (30): IFSC, INCO25, AFA, Embrapa Agrobiologia, ENCE, ENSP/PROCC/FIOCRUZ, IFMT, Maynooth University, Ministério da Saúde (MS/SVS/DIAHV), Poupex, PUC-MG, PUC-RJ, R-ladies, SEBRAE, UCDB, UEP, UERJ, UFBA, UFF, UFMG, UFMS, UFRB, UFRJ, UFSC, UFU, UNB, UNICAMP, UNIRIO, USP, UTFP-Câmpus Francisco Beltrão</li>
 </ul>
 </section>
 <section id="educa-ser" class="slide level2" data-background-image="ser3.png" data-background-size="130px" data-background-position="bottom">
@@ -682,9 +685,10 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <section id="estatistica-e-com-r" class="slide level2" data-background-image="ser3.png" data-background-size="130px" data-background-position="top">
 <h2>Estatística é com R!</h2>
 <ul>
-<li class="fragment">www.estatisticacomr.uff.br mais de 60 mil visualizações</li>
-<li class="fragment">www.facebook.com/estatisticacomr mais de 1300 curtidas</li>
-<li class="fragment">www.youtube.com/estatisticacomr mais de 9 mil visualizações e 400 inscritos</li>
+<li class="fragment">www.estatisticacomr.uff.br mais de 180 mil visualizações</li>
+<li class="fragment">www.facebook.com/estatisticacomr mais de 1600 curtidas</li>
+<li class="fragment">www.youtube.com/estatisticacomr mais de 35 mil visualizações e quase 800 inscritos</li>
+<li class="fragment">R-ladies Niterói com mais de 300 membros</li>
 <li class="fragment">Portal, vídeos, tutoriais, livros e treinamento.</li>
 </ul>
 </section>
